# shinyprofiler-uwp

./: .gitignore  CMakeLists.txt  README.md
Shiny/include/: ShinyManager.h
Shiny/src/: ShinyManager.c
